# trail-blazer

./: .gitignore  .justfile  Cargo.toml  flake.nix  index.html  trail-blazer.js  trail-blazer.wasm
.github/workflows/: deploy.yml
src/: assets.rs  game.rs  interop.rs  main.rs  menu.rs
src/model/: client.rs  mod.rs  particles.rs  server.rs  shared.rs
src/model/logic/: mod.rs
src/render/: mod.rs
src/server/: connection.rs  mod.rs  state.rs
src/ui/: mod.rs
