[package]
name = "trail-blazer"
version = "0.1.0"
edition = "2024"

[dependencies]
geng = "0.18"
geng-utils = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = { version = "=0.2.100", features = ["serde"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "=0.3.77"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.4.7"
rustrict = "0.7.36"

[patch.crates-io]
geng = { git = "https://github.com/geng-engine/geng", rev = "1e35585545463c919ff0da849af4fdad69ab02fa" }
geng-utils = { git = "https://github.com/Nertsal/geng-utils", rev = "f6e07e1db3096d710d5242c80c3781fd2d554045"}
